--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="form-group">
                             <button type="submit" class="form-control-submit-button">Enviar</button>
                         </div>
-                        <input type="hidden" name="_next" value="https://luiseml.github.io/portafolio/">
+                        <input type="hidden" name="_next" value="https://victormanuel-portafolio.netlify.app/">
                         <input type="hidden" name="_captcha" value="false">
                     </form>
                     <!-- end of contact form -->
