--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container first">
-                        <h2>Hola, Bienvenidos a mi portafolio, soy Víctor Manuel!</h2>
-                        <p>Desde que empece en el mundo de la programación quedé sorprendido con todas las herramientas y tecnologías que se pueden utilizar para realizar diferentes páginas y aplicaciones, es por ello que me fuí adentrando un poco más a este mundo y prueba de ello, es que he realizado proyectos personales y escolares que me han ayudado a fortalecer mis conocimientos. Actualmente estoy trabajando en el desarrollo Frontend.</p>
+                        <h2>Hola, Bienvenidos a mi portfolio, soy Víctor Manuel!</h2>
+                        <p>Desde que empecé en el mundo de la programación quedé sorprendido con todas las herramientas y tecnologías que se pueden utilizar para realizar diferentes páginas y aplicaciones, es por ello que me fuí adentrando un poco más a este mundo y prueba de ello, es que he realizado proyectos personales y escolares que me han ayudado a fortalecer mis conocimientos. Actualmente estoy trabajando en el desarrollo Frontend.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -200,11 +200,11 @@
 
 
     <!-- Contact -->
-    <div id="contact" class="form-1 bg-gray">
+    <div id="contact" class="form-1 contenedor">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Contact</h2>
+                    <h2 class="color-text">Contact</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -237,7 +237,7 @@
         </div> <!-- end of container -->
     </div> <!-- end of form-1 -->  
     <!-- end of contact -->
-
+<br><br>
 
     <!-- Footer -->
     <div class="footer bg-gray">
