--- a/index.html
+++ b/index.html
@@ -76,9 +76,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
+                    <div class="text-container third">
+                        <div class="home__photo">
+                            <img src="img/foto.jpg" alt="" />
+                        </div>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
                     <div class="text-container first">
                         <h2>Hola, Bienvenidos a mi portfolio, soy Víctor Manuel!</h2>
-                        <p>Desde que empecé en el mundo de la programación quedé sorprendido con todas las herramientas y tecnologías que se pueden utilizar para realizar diferentes páginas y aplicaciones, es por ello que me fuí adentrando un poco más a este mundo y prueba de ello, es que he realizado proyectos personales y escolares que me han ayudado a fortalecer mis conocimientos. Actualmente estoy trabajando en el desarrollo Frontend.</p>
+                        <p>Desde que empecé en el mundo de la programación quedé sorprendido con todas las herramientas y tecnologías que se pueden utilizar 
+                            para realizar diferentes páginas y aplicaciones, es por ello que me fuí adentrando un poco más a este mundo y prueba de ello, 
+                            es que he realizado proyectos personales y escolares que me han ayudado a fortalecer mis conocimientos. he aprendido a trabajar en equipo
+                            con personas muy talentosas para desarrollar software y poder solucionar problemas de la vida real. Me considero
+                            una persona honesta, respetuosa, responsable con lo que realizo y mi deseo es seguir aprendiendo más cosas. 
+                            Actualmente estoy trabajando en el desarrollo Frontend.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -89,10 +101,6 @@
                         <div class="time">2021 - 2022</div>
                         <h6>Programador Frontend</h6>
                         <p>Desarrollo de punto de venta del lado frontend, utilizando tecnologías como, JavaScript, CSS, HTML, Bootstrap, etc.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-4">
-                    <div class="text-container third">
                         <div class="time">2020 - 2021</div>
                         <h6>Programador Frontend</h6>
                         <p>Desarrollo de página web del lado frontend implementando tecnologias como, JavaScript, HTML, CSS y Booststrap.</p>
@@ -115,10 +123,8 @@
                         <div class="text-container">
                             <h4>Mis Hobbies</h4>
                             <p>Estudiar en mis tiempos libres, jugar futbol, jugar videojuegos y escuchar música.</p>
-                            <h5>Herramientas de diseño</h5>
-                            <p>Herramienta con la que he trabajado en cuanto al diseño: Adobe XD.</p>
                             <h5>Habilidades</h5>
-                            <p>Trabajo con herramientas de desarrollo web y versionamiento tales como: HTML 5, CSS, JavaScript, Bootstrap, Angular, GitLab y Github.</p>
+                            <p>Trabajo con herramientas de desarrollo web y versionamiento tales como: HTML 5, CSS, JavaScript, Bootstrap, Angular, GitLab, Github y Adobe XD.</p>
                             
                             <div class="icons-container">
                                 <img src="img/adobexd.png" alt="adobe">
@@ -140,15 +146,20 @@
     </div> <!-- end of split -->
     <!-- end of details -->
 
-
+    <br>
     <!-- Works -->
+    <div class="fondo">
+        <div class="col-lg-12">
+            <h2 class="text-center clr">Projects</h2>
+        </div> <!-- end of col -->
+    </div>
     <div id="portafolio" class="basic-4">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row fondo">
                 <div class="col-lg-12">
                     <h2>Projects</h2>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                </div> end of col
+            </div> end of row -->
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container">
