--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
           </div>
         </div>
       </header>
-    <section id="contacto" class="contacto">
+    <section id="contacto" class="contacto" action="https://formsubmit.co/vic.25.alv@gmail.com" method="POST">
         <div class="container contenido-contacto">
                 <form action="" id="formulario">
                     <div class="input-container">
