--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="links">
           <a href="/contact.html" class="contact">Contáctame</a>
-          <a href="CV-victor.pdf" class="curriculum" download>Curriculum</a>
+          <a href="assets/CV-victor.pdf" class="curriculum" download>Curriculum</a>
         </div>
       </div>
     </section>
